tests/errors/return_outside_function.py
# expect_error: SyntaxError
return 1